// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`firebaseReducer reducer AUTH_STATUS_LOGGED_IN 1`] = `
Object {
  "appState": "READY",
  "authState": Object {
    "error": "",
    "inProgress": false,
  },
  "flocks": Object {
    "data": Object {
      "flock1": "item1value",
      "flock2": "item2value",
    },
    "error": "",
    "inProgress": false,
    "key": "key1",
  },
  "initialUrl": null,
  "user": Object {
    "email": "test@example.com",
    "uid": "testId",
  },
  "userSettings": Object {
    "data": Object {
      "item1": "item1value",
      "item2": "item2value",
    },
    "error": "",
    "inProgress": false,
    "key": "key1",
  },
}
`;

exports[`firebaseReducer reducer GET_FLOCK_FULFILLED 1`] = `
Object {
  "appState": "STARTING",
  "authState": Object {
    "error": "",
    "inProgress": false,
  },
  "flocks": Object {
    "data": Object {
      "flock1": Object {
        "name": "Flock 1",
        "ownedBy": "user1",
      },
    },
    "error": "",
    "inProgress": false,
  },
  "initialUrl": null,
  "user": null,
  "userSettings": Object {
    "data": Object {
      "item1": "item1value",
      "item2": "item2value",
    },
    "error": "",
    "inProgress": false,
    "key": "key1",
  },
}
`;

exports[`firebaseReducer reducer GET_FLOCK_FULFILLED 2`] = `
Object {
  "appState": "STARTING",
  "authState": Object {
    "error": "",
    "inProgress": false,
  },
  "flocks": Object {
    "data": Object {
      "flock1": Object {
        "name": "Flock 1",
        "ownedBy": "user1",
      },
      "flock2": Object {
        "name": "Flock 2",
        "ownedBy": "user2",
      },
    },
    "error": "",
    "inProgress": false,
  },
  "initialUrl": null,
  "user": null,
  "userSettings": Object {
    "data": Object {
      "item1": "item1value",
      "item2": "item2value",
    },
    "error": "",
    "inProgress": false,
    "key": "key1",
  },
}
`;

exports[`firebaseReducer reducer GET_FLOCK_REJECTED 1`] = `
Object {
  "appState": "STARTING",
  "authState": Object {
    "error": "",
    "inProgress": false,
  },
  "flocks": Object {
    "data": Object {
      "flock1": Object {
        "name": "Flock 1",
        "owneBy": "UserId1",
      },
    },
    "error": "Error Message",
    "inProgress": false,
  },
  "initialUrl": null,
  "user": null,
  "userSettings": Object {
    "data": Object {
      "item1": "item1value",
      "item2": "item2value",
    },
    "error": "",
    "inProgress": false,
    "key": "key1",
  },
}
`;

exports[`firebaseReducer reducer GET_FLOCK_REQUESTED 1`] = `
Object {
  "appState": "STARTING",
  "authState": Object {
    "error": "",
    "inProgress": false,
  },
  "flocks": Object {
    "data": Object {},
    "error": "",
    "inProgress": true,
  },
  "initialUrl": null,
  "user": null,
  "userSettings": Object {
    "data": Object {
      "item1": "item1value",
      "item2": "item2value",
    },
    "error": "",
    "inProgress": false,
    "key": "key1",
  },
}
`;

exports[`firebaseReducer reducer missing initial state 1`] = `
Object {
  "appState": "STARTING",
  "authState": Object {
    "error": "",
    "inProgress": false,
  },
  "chickens": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
  "eggs": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
  "flocks": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
  "initialUrl": null,
  "user": null,
  "userSettings": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
}
`;

exports[`firebaseReducer reducer undefined initial state 1`] = `
Object {
  "appState": "STARTING",
  "authState": Object {
    "error": "",
    "inProgress": false,
  },
  "chickens": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
  "eggs": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
  "flocks": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
  "initialUrl": null,
  "user": null,
  "userSettings": Object {
    "data": Object {},
    "error": "",
    "inProgress": false,
    "key": "",
  },
}
`;
